--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,10 @@
 			rel="stylesheet"
 			href="node_modules/bootstrap/dist/css/bootstrap.min.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+		/>
 		<script
 			type="module"
 			src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
