--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,10 @@
 			type="module"
 			src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
 		></script>
+		<link
+			rel="stylesheet"
+			href="node_modules/bootstrap-icons/font/bootstrap-icons.min.css"
+		/>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
